--- a/ChiTietBaiViet/Chi tiết bài viết_fix.html
+++ b/ChiTietBaiViet/Chi tiết bài viết_fix.html
@@ -594,12 +594,19 @@
     .content-right-tlq:hover ~ .content-left-tlq {
         background-color: #0D4C92;
     }
+
     .content-right-tlq:hover .text-title-tlq-img,
     .content-right-tlq:hover .text-des-tlq > p,
     .content-right-tlq:hover .text-readmore-tlq{
         color: #ffffff!important;
     }
-
+    .content-right-tlq,
+    .content-left-tlq,
+    .content-right-tlq .text-title-tlq-img,
+    .content-right-tlq .text-des-tlq > p,
+    .content-right-tlq .text-readmore-tlq {
+        transition: all 0.9s ease;
+    }
 
 </style>
 <style>
