--- a/NganhDoc/Chính quyền thành phố/GioiThieuChinhQuyenThanhPhoThuDuc.html
+++ b/NganhDoc/Chính quyền thành phố/GioiThieuChinhQuyenThanhPhoThuDuc.html
@@ -1,3 +1,40 @@
+<style>
+  .introduce_donvi_bg {
+    background-image: url(/documents/39403/318145/bg-gt-chinhquyen.png);
+    background-size: cover;
+    background-position: center;
+    min-height: 280px;
+    background-repeat: no-repeat;
+  }
+  .introduce_donvi {
+    height: 100%;
+  }
+  .introduce_donvi .introduce_donvi_title {
+    color: #2e2e2e;
+    font-size: 32px;
+    font-weight: 700;
+  }
+  .table-introduce .tr-introduce-tptd:hover {
+    background-color: transparent;
+    color: inherit;
+  }
+  .table-title-introduce {
+    background-color: #bce6fe !important;
+    color: #0d4c92 !important;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+  }
+  .table-introduce td {
+    vertical-align: middle;
+  }
+  .table-introduce .tr-introduce-tptd {
+    height: 140px;
+    font-size: 14px;
+    font-weight: 400;
+  }
+</style>
+
 <div
   class="featured-gt-chiquyen introduce_donvi_bg my-4"
   id="chinhquyen-tpthuduc"
@@ -18,7 +55,7 @@
           </thead>
           <tbody>
             <!-- Cột bên trái -->
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">01</td>
               <td>
                 <strong>UBND Huyện Bình Chánh</strong><br />
@@ -31,7 +68,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">02</td>
               <td>
                 <strong>UBND Huyện Hóc Môn</strong><br />
@@ -42,7 +79,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">03</td>
               <td>
                 <strong>UBND Quận 3</strong><br />
@@ -55,7 +92,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">04</td>
               <td>
                 <strong>UBND Quận 6</strong><br />
@@ -68,7 +105,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">05</td>
               <td>
                 <strong>UBND Quận 10</strong><br />
@@ -81,7 +118,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">06</td>
               <td>
                 <strong>UBND Quận Bình Tân</strong><br />
@@ -94,7 +131,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">07</td>
               <td>
                 <strong>UBND Quận Phú Nhuận</strong><br />
@@ -107,7 +144,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">08</td>
               <td>
                 <strong>UBND Quận Tân Bình</strong><br />
@@ -120,7 +157,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">09</td>
               <td>
                 <strong>UBND Huyện Cần Giờ</strong><br />
@@ -134,7 +171,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">10</td>
               <td>
                 <strong>UBND Huyện Nhà Bè</strong><br />
@@ -147,7 +184,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">11</td>
               <td>
                 <strong>UBND Quận 4</strong><br />
@@ -174,7 +211,7 @@
           </thead>
           <tbody>
             <!-- Cột bên phải -->
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">12</td>
               <td>
                 <strong>UBND Quận 7</strong><br />
@@ -187,7 +224,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">13</td>
               <td>
                 <strong>UBND Quận 11</strong><br />
@@ -200,7 +237,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">14</td>
               <td>
                 <strong>UBND Quận Bình Thạnh</strong><br />
@@ -213,7 +250,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">15</td>
               <td>
                 <strong>UBND Thành phố Thủ Đức</strong><br />
@@ -227,7 +264,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">16</td>
               <td>
                 <strong>UBND Huyện Củ Chi</strong><br />
@@ -241,7 +278,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">17</td>
               <td>
                 <strong>UBND Quận 1</strong><br />
@@ -254,7 +291,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">18</td>
               <td>
                 <strong>UBND Quận 5</strong><br />
@@ -267,7 +304,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">19</td>
               <td>
                 <strong>UBND Quận 8</strong><br />
@@ -280,7 +317,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">20</td>
               <td>
                 <strong>UBND Quận 12</strong><br />
@@ -293,7 +330,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">21</td>
               <td>
                 <strong>UBND Quận Gò Vấp</strong><br />
@@ -306,7 +343,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-tptd">
               <td class="text-center">22</td>
               <td>
                 <strong>UBND Quận Tân Phú</strong><br />
