--- a/NganhDoc/Chính quyền thành phố/Giới Thiệu - Đơn Vị Sự Nghiệp.html
+++ b/NganhDoc/Chính quyền thành phố/Giới Thiệu - Đơn Vị Sự Nghiệp.html
@@ -1,8 +1,4 @@
 <style>
-  body {
-    font-family: "Roboto";
-  }
-
   .introduce_donvi_bg {
     background-image: url(/documents/39403/318145/bg-gt-chinhquyen.png);
     background-size: cover;
@@ -18,7 +14,7 @@
     font-size: 32px;
     font-weight: 700;
   }
-  .table-introduce .tr-introduce:hover {
+  .table-introduce .tr-introduce-dvsn:hover {
     background-color: transparent;
     color: inherit;
   }
@@ -32,8 +28,8 @@
   .table-introduce td {
     vertical-align: middle;
   }
-  .table-introduce .tr-introduce {
-    height: 120px;
+  .table-introduce .tr-introduce-dvsn {
+    height: 140px;
     font-size: 14px;
     font-weight: 400;
   }
@@ -43,7 +39,7 @@
   class="featured-gt-chiquyen introduce_donvi_bg my-4"
   id="chinhquyen-coquanchuyenmon"
 >
-  <div class="introduce_donvi px-0">
+  <div class="introduce_donvi warpper-content-dvsn px-0">
     <h2 class="introduce_donvi_title text-center mb-4 pt-5">
       ĐƠN VỊ SỰ NGHIỆP
     </h2>
@@ -62,7 +58,7 @@
           </thead>
           <tbody>
             <!-- Cột bên trái -->
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">01</td>
               <td>
                 <strong
@@ -73,7 +69,7 @@
                 Email: hids@tphcm.gov.vn
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">02</td>
               <td>
                 <strong
@@ -85,7 +81,7 @@
                 Email: tnxp@tphcm.gov.vn
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">03</td>
               <td>
                 <strong>Trung tâm Xúc tiến thương mại và đầu tư (ITPC)</strong
@@ -95,7 +91,7 @@
                 Email: itpc@itpc.gov.vn
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">04</td>
               <td>
                 <strong
@@ -107,7 +103,7 @@
                 Email: bqldsdt@tphcm.gov.vn
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">05</td>
               <td>
                 <strong>Trường Đại học Y khoa Phạm Ngọc Thạch</strong><br />
@@ -122,7 +118,7 @@
                 >
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">06</td>
               <td>
                 <strong>Trường Đại học Sài Gòn</strong><br />
@@ -131,7 +127,7 @@
                 Email: daihocsaigon@sgu.edu.vn
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">07</td>
               <td>
                 <strong>Ban Quản lý Khu vực phát triển đô thị Thủ Thiêm</strong
@@ -140,7 +136,7 @@
                 ĐT: (028)35261299<br />
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">08</td>
               <td>
                 <strong>Ban Quản lý Khu vực phát triển đô thị Tây Bắc</strong
@@ -166,7 +162,7 @@
           </thead>
           <tbody>
             <!-- Cột bên phải -->
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">09</td>
               <td>
                 <strong
@@ -178,7 +174,7 @@
                 Email: bqlkn@tphcm.gov.vn
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">10</td>
               <td>
                 <strong
@@ -188,7 +184,7 @@
                 286 Điện Biên Phủ, Phường Võ Thị Sáu, Quận 3, Hồ Chí Minh<br />
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">11</td>
               <td>
                 <strong>Trung tâm Chuyển đổi số Thành phố Hồ Chí Minh</strong
@@ -197,7 +193,7 @@
                 Chí Minh
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">12</td>
               <td>
                 <strong>Trung tâm Công nghiệp 4.0</strong><br />
@@ -205,7 +201,7 @@
                 Đức, Thành phố Hồ Chí Minh<br />
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">13</td>
               <td>
                 <strong
@@ -217,7 +213,7 @@
                 Email: bqlddcn@tphcm.gov.vn
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">14</td>
               <td>
                 <strong
@@ -229,7 +225,7 @@
                 ĐT: +84 028 39 300 530 - Fax: +84 028 39 306 638<br />
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">15</td>
               <td>
                 <strong
@@ -240,7 +236,7 @@
                 TP.HCM<br />
               </td>
             </tr>
-            <tr class="tr-introduce">
+            <tr class="tr-introduce-dvsn">
               <td class="text-center">16</td>
               <td>
                 <strong
@@ -258,21 +254,3 @@
     </div>
   </div>
 </div>
-<script>
-  function setEqualTableHeight() {
-    const leftTable = document.getElementById("left-table");
-    const rightTable = document.getElementById("right-table");
-
-    const leftHeight = leftTable.offsetHeight;
-    const rightHeight = rightTable.offsetHeight;
-
-    const maxHeight = Math.max(leftHeight, rightHeight);
-
-    leftTable.style.height = maxHeight + "px";
-    rightTable.style.height = maxHeight + "px";
-  }
-
-  // Gọi hàm khi trang đã load xong và khi thay đổi kích thước cửa sổ
-  window.addEventListener("load", setEqualTableHeight);
-  window.addEventListener("resize", setEqualTableHeight);
-</script>
