--- a/tintuc-sukien/2011_TinTucSuKien_TinMoi.html
+++ b/tintuc-sukien/2011_TinTucSuKien_TinMoi.html
@@ -1,7 +1,5 @@
 <style>
-    * {
-        font-family: "Roboto";
-    }
+
     .news-new-container{
         padding-right: 15px;
         padding-left: 15px;
@@ -163,6 +161,7 @@
                     createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
                     createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
                     curEntry = curEntry
+                        viewCout = curEntry.getViewCount()
                     viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
                     indexLocal = indexLocal + 1 />
 
@@ -181,7 +180,7 @@
                             </div>
                             <div class="d-flex align-items-center gap-1 view-count-container">
                                 <i class="fa fa-eye"></i>
-                                <span class="news-views">1,141</span>
+                                <span class="news-views">${viewCout}</span>
                             </div>
                         </div>
                     </div>
