--- a/PhanVanMai/ChuyenTrangPVMTrangChuAnhVideo_fix.html
+++ b/PhanVanMai/ChuyenTrangPVMTrangChuAnhVideo_fix.html
@@ -1,4 +1,4 @@
-<div class="box-shadow-left-right">
+<div class="box-shadow-left-right pt-5">
     <section class="news-categories">
         <div class="d-flex justify-content-between col-12">
             <div>
@@ -247,7 +247,7 @@
         font-size: 16px;
         font-style: normal;
         font-weight: 600;
-        line-height: 23.4px;
+        line-height: 37.4px;
         letter-spacing: 0.024px;
         overflow: hidden;
         display: -webkit-box;
