--- a/PhanVanMai/Chỉ Đạo Chủ Tịch PVM.html
+++ b/PhanVanMai/Chỉ Đạo Chủ Tịch PVM.html
@@ -7,7 +7,7 @@
 
 <div class="bg-F8F9FA mr-15pt box-shadow-right-15pt">
     <div class="row m-0">
-        <div class="baner-content col-12 col-md-12 pb-0 row pt-2 m-0">
+        <div class="baner-content col-12 col-md-12 pb-0 banner-cd-pvm row m-0">
             <!-- Giới thiệu Chỉ đạo -->
             <div class="profile-right-pct col-12 pt-0">
                 <div class="activities-header-pct">
