--- a/PhanVanMai/Chủ Tịch PVM Banner.html
+++ b/PhanVanMai/Chủ Tịch PVM Banner.html
@@ -208,13 +208,6 @@
     }
   }
 
-  @media screen and (min-width: 1325px) and (max-width: 1440px) {
-  }
-
-  @media screen and (min-width: 1441px) and (max-width: 1824px) {
-  }
-  @media screen and (min-width: 1825px) {
-  }
   .mr-15pt {
     margin-right: 16%;
   }
@@ -235,9 +228,94 @@
   .activities-list-pct {
     margin-left: 4%;
   }
+  @media screen and (min-width: 1024px) and (max-width: 1324px) {
+    .ml-15pt {
+      margin-left: 1%;
+    }
+    .mr-15pt {
+      margin-right: 1%;
+    }
+    .content-cddh-ct {
+      margin-left: 1% !important;
+    }
+    .content-ltcd {
+      padding-right: 1% !important;
+    }
+    .banner-cd-pvm {
+      padding-top: 7% !important;
+    }
+  }
+  @media screen and (min-width: 1325px) and (max-width: 1440px) {
+    .ml-15pt {
+      margin-left: 9%;
+    }
+    .mr-15pt {
+      margin-right: 11%;
+    }
+    .content-cddh-ct {
+      margin-left: 8% !important;
+    }
+    .content-ltcd {
+      padding-right: 16% !important;
+    }
+    .banner-cd-pvm {
+      padding-top: 1% !important;
+    }
+  }
+  @media screen and (min-width: 1441px) and (max-width: 1824px) {
+    .ml-15pt {
+      margin-left: 16%;
+    }
+    .mr-15pt {
+      margin-right: 18%;
+    }
+    .content-cddh-ct {
+      margin-left: 13% !important;
+    }
+    .content-ltcd {
+      padding-right: 26% !important;
+    }
+    .banner-cd-pvm {
+      padding-top: 1% !important;
+    }
+  }
+  @media screen and (min-width: 1825px) and (max-width: 2304px) {
+    .ml-15pt {
+      margin-left: 19%;
+    }
+    .mr-15pt {
+      margin-right: 20%;
+    }
+    .content-cddh-ct {
+      margin-left: 15% !important;
+    }
+    .content-ltcd {
+      padding-right: 29% !important;
+    }
+    .banner-cd-pvm {
+      padding-top: 10% !important;
+    }
+  }
+  @media screen and (min-width: 2305px) {
+    .ml-15pt {
+      margin-left: 35%;
+    }
+    .mr-15pt {
+      margin-right: 37%;
+    }
+    .content-cddh-ct {
+      margin-left: 27% !important;
+    }
+    .content-ltcd {
+      padding-right: 54% !important;
+    }
+    .banner-cd-pvm {
+      padding-top: 10% !important;
+    }
+  }
 </style>
 <div class="profile-container-pct">
-  <div class="container ml-15pt">
+  <div class="ml-15pt">
     <div class="row m-0 box-shadow-left-15pt">
       <div class="d-none d-md-block col-12 col-md-12 pt-0 pt-md-5">
         <div class="profile-left-pct pr-0">
