--- a/TrangChu/home-tinnoibat-tinmoi_fix.html
+++ b/TrangChu/home-tinnoibat-tinmoi_fix.html
@@ -33,7 +33,7 @@
                                 <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                     <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                                 <#else>
-                                    <#assign smallImageUrl = "" >
+                                    <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" >
                                 </#if>
                                 <div class="main-news position-relative h-100 pb-3 img-hover">
                                     <div class="position-relative px-sm-0 px-lg-0 pe-sm-0 mx-sm-0">
@@ -70,7 +70,7 @@
                                 <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                     <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                                 <#else>
-                                    <#assign smallImageUrl = "" >
+                                    <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" >
                                 </#if>
                                 <div class="col-md-6 pb-3 pl-md-0 ">
                                     <div class="w-100 h-100 border-bottom-1px home-tinnoibat-tinmoi-news bg-custom-gray-tinnoibat text-decoration-none text-black d-flex flex-column"
@@ -110,7 +110,7 @@
                                 <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                     <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                                 <#else>
-                                    <#assign smallImageUrl = "" >
+                                    <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" >
                                 </#if>
                                 <div class="main-news position-relative h-100 pb-3">
 
@@ -146,7 +146,7 @@
                                 <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                     <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                                 <#else>
-                                    <#assign smallImageUrl = "" >
+                                    <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" >
                                 </#if>
                                 <div class="col-md-6 pb-3 pl-md-0 ">
                                     <div class="w-100 h-100 border-bottom-1px home-tinnoibat-tinmoi-news bg-custom-gray-tinnoibat text-decoration-none text-black d-flex flex-column"
