--- a/ChinhQuyen/ChinhQuyen_DauTu_goc.html
+++ b/ChinhQuyen/ChinhQuyen_DauTu_goc.html
@@ -1,5 +1,5 @@
 <style>
-  .o-quyhoach a span {
+  .o-quyhoach {
     color: #db7100 !important;
   }
   .ct-span {
@@ -44,14 +44,14 @@
             <li class="nav-item" role="presentation">
               <button
                 style="width: 200px !important"
-                class="nav-link ct-navlink-dautu"
+                class="nav-link ct-navlink-dautu active"
                 id="pills-home-tab-a"
                 data-toggle="pill"
                 data-target="#pills-home"
                 type="button"
                 role="tab"
                 aria-controls="pills-home"
-                aria-selected="false"
+                aria-selected="true"
               >
                 dự án đầu tư công
               </button>
@@ -89,14 +89,14 @@
             <li class="nav-item" role="presentation">
               <button
                 style="width: 200px !important"
-                class="nav-link ct-navlink-dautu active"
+                class="nav-link ct-navlink-dautu"
                 id="pills-profile-tab-d"
                 data-toggle="pill"
                 data-target="#pills-profile-b"
                 type="button"
                 role="tab"
                 aria-controls="pills-profile-b"
-                aria-selected="true"
+                aria-selected="false"
               >
                 chính sách thu hút đầu tư
               </button>
@@ -119,7 +119,7 @@
           </ul>
           <div class="tab-content" id="pills-tabContent">
             <div
-              class="tab-pane fade"
+              class="tab-pane fade active show"
               id="pills-home"
               role="tabpanel"
               aria-labelledby="pills-home-tab-a"
@@ -512,7 +512,7 @@
               </div>
             </div>
             <div
-              class="tab-pane fade active show"
+              class="tab-pane fade"
               id="pills-profile-b"
               role="tabpanel"
               aria-labelledby="pills-profile-tab-d"
