--- a/ChinhQuyen/Chính Quyền - Đầu Tư_fix.html
+++ b/ChinhQuyen/Chính Quyền - Đầu Tư_fix.html
@@ -46,7 +46,7 @@
   width: 6px;
 }
 .dautu-item{
-  margin-bottom: 28px;
+  margin-bottom: 22px;
 }
 .list-dautu{
   padding-right: 12px;
@@ -54,11 +54,12 @@
 
 
 </style>
-<div class="position-relative w-100">
+<div class="position-relative w-100 wrapper-cq-dautu">
   <div class="w-100">
     <div class="row m-0 w-100 h-100">
       <div class="col-md-12 pl-0 px-0 col-lg-12 h-100" style="min-height: 180px">
         <div class="pb-3">
+
           <div class="tab-content" id="pills-tabContent">
             <div
               class="tab-pane fade active show"
@@ -89,6 +90,7 @@
                             createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
                             createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
                             curEntry = curEntry
+                            viewCount = curEntry.getViewCount()
                             viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
                             indexLocal = indexLocal + 1 />
             
@@ -105,14 +107,14 @@
                                   height="20"
                                 />
                                 <span class="mr-3 ct-ngaythang-dt">${createDay}/${createMonth}/${createYear}</span>
-                                <span class="mr-3 ct-span text-gioi-han-1-dong cq-dautu-title"
+                                <span class="mr-3 text-gioi-han-1-dong cq-dautu-title"
                                   >${title}</span
                                 >
                                 <span class="d-flex align-items-center justify-content-center"
                                   ><img
                                     class="mr-1"
                                     src="/documents/39403/307879/icon_view.svg"
-                                  />1,141</span
+                                  />${viewCount}</span
                                 >
                               </p>
                         </#if>
